--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5" // parse sdk
+    implementation "androidx.appcompat:appcompat:${appCompatVersion}" // bottom navigation
+    implementation "com.google.android.material:material:${designSupportVersion}" // bottom navigation
 }
