--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5" // parse sdk
     implementation "androidx.appcompat:appcompat:${appCompatVersion}" // bottom navigation
     implementation "com.google.android.material:material:${designSupportVersion}" // bottom navigation
+    implementation 'com.github.bumptech.glide:glide:4.12.0' // glide
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0' // glide
 }
