--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation "com.google.android.material:material:${designSupportVersion}" // bottom navigation
     implementation 'com.github.bumptech.glide:glide:4.12.0' // glide
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0' // glide
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0' // pull to refresh
 }
