--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0' // glide
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0' // glide
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0' // pull to refresh
+    implementation "androidx.cardview:cardview:1.0.0" // card view
 }
