--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0' // glide
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0' // pull to refresh
     implementation "androidx.cardview:cardview:1.0.0" // card view
+    implementation 'org.parceler:parceler-api:1.1.12' // parcel
+    annotationProcessor 'org.parceler:parceler:1.1.12' // parcel
 }
