--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     androidTestImplementation "com.google.truth:truth:1.1.3" // unit testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5" // parse sdk
+//    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5" // parse sdk
     implementation "androidx.appcompat:appcompat:${appCompatVersion}" // bottom navigation
     implementation "com.google.android.material:material:${designSupportVersion}" // bottom navigation
     implementation 'com.github.bumptech.glide:glide:4.12.0' // glide
@@ -57,4 +57,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0' // location
     implementation 'com.google.android.gms:play-services-maps:17.0.1' // maps
     implementation 'com.google.android.libraries.places:places:2.4.0' // places
+    implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.24.1' // parse sdk
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1' // for logging API calls to LogCat
 }
