--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gem">
-        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".EditProfileActivity" />
         <activity android:name=".SearchActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
