--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android' // kotlin
 }
 
 android {
@@ -61,4 +62,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1' // for logging API calls to LogCat
     implementation 'tyrantgit:explosionfield:1.0.1' // explosion animation
     implementation 'com.royrodriguez:transitionbutton:0.2.0' // transition button animation
+    implementation 'androidx.core:core-ktx:1.3.2' // kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // kotlin
 }
