--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation "com.google.android.material:material:${designSupportVersion}" // bottom navigation
     implementation 'com.github.bumptech.glide:glide:4.12.0' // glide
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0' // glide
+    implementation 'jp.wasabeef:glide-transformations:4.1.0' // glide rounded corners
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0' // pull to refresh
     implementation "androidx.cardview:cardview:1.0.0" // card view
     implementation 'org.parceler:parceler-api:1.1.12' // parcel
