--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation 'com.royrodriguez:transitionbutton:0.2.0' // transition button animation
     implementation 'androidx.core:core-ktx:1.3.2' // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // kotlin
+    implementation 'com.google.maps.android:android-maps-utils:0.5+' // map marker speech bubble
 }
