--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2' // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // kotlin
     implementation 'com.google.maps.android:android-maps-utils:0.5+' // map marker speech bubble
+    implementation 'com.yayandroid:Rotatable:1.1.2' // rotatable
+    implementation 'com.facebook.shimmer:shimmer:0.5.0' // shimmer
+
 }
