--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,6 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.5+' // map marker speech bubble
     implementation 'com.yayandroid:Rotatable:1.1.2' // rotatable
     implementation 'com.facebook.shimmer:shimmer:0.5.0' // shimmer
+    implementation 'com.flaviofaria:kenburnsview:1.0.7' // ken burns
 
 }
