--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,6 @@ dependencies {
     implementation 'com.yayandroid:Rotatable:1.1.2' // rotatable
     implementation 'com.facebook.shimmer:shimmer:0.5.0' // shimmer
     implementation 'com.flaviofaria:kenburnsview:1.0.7' // ken burns
+    implementation 'nl.dionsegijn:konfetti:1.3.2' // confetti
 
 }
